# depth_sensors

./: LICENSE  README.md
depth_sensors/: CMakeLists.txt  package.xml
kinect_control/: CMakeLists.txt  package.xml
kinect_control/config/: kinect_control.yaml
kinect_description/: CMakeLists.txt  package.xml
kinect_description/launch/: kinect.launch
kinect_description/urdf/: kinect_stand.urdf.xacro
kinect_description/urdf/kinect/: kinect.xacro
kinect_description/urdf/stand/: macros.xacro  materials.xacro  properties.xacro  stand.gazebo.xacro  stand.urdf.xacro
senz3d_description/: CMakeLists.txt  package.xml
senz3d_description/meshes/sensors/: asus_xtion_pro_live.dae
senz3d_description/urdf/: senz3d.xacro
simple_description/: CMakeLists.txt  package.xml
simple_description/launch/: simple.launch
simple_description/urdf/: simple.urdf.xacro
